--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
+    "@prisma/client": "^5.0.0",
     "axios": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
@@ -35,6 +36,7 @@
     "nx": "16.5.2",
     "nx-cloud": "latest",
     "prettier": "^2.6.2",
+    "prisma": "^5.0.0",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.1.3"
