--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
+    "@nestjs/swagger": "^7.1.2",
     "@prisma/client": "^5.0.0",
     "axios": "^1.0.0",
     "reflect-metadata": "^0.1.13",
