--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.0",
-    "tslib": "^2.3.0"
+    "rxjs": "^7.8.0"
   },
   "devDependencies": {
     "@nestjs/schematics": "^10.0.1",
@@ -49,7 +48,8 @@
     "prettier": "^2.6.2",
     "prisma": "^5.0.0",
     "ts-jest": "^29.1.0",
-    "ts-node": "10.9.1",
+    "ts-node": "^10.9.1",
+    "tslib": "^2.6.1",
     "typescript": "~5.1.3"
   },
   "prisma": {
