--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "rxjs": "^7.8.0"
   },
   "devDependencies": {
+    "@brakebein/prisma-generator-nestjs-dto": "^1.17.4",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
     "@nx/eslint-plugin": "16.5.2",
