--- a/package.json
+++ b/package.json
@@ -5,6 +5,14 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@angular/animations": "~16.1.0",
+    "@angular/common": "~16.1.0",
+    "@angular/compiler": "~16.1.0",
+    "@angular/core": "~16.1.0",
+    "@angular/forms": "~16.1.0",
+    "@angular/platform-browser": "~16.1.0",
+    "@angular/platform-browser-dynamic": "~16.1.0",
+    "@angular/router": "~16.1.0",
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/jwt": "^10.1.0",
@@ -20,30 +28,48 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.0"
+    "rxjs": "^7.8.0",
+    "zone.js": "~0.13.0"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~16.1.0",
+    "@angular-devkit/core": "~16.1.0",
+    "@angular-devkit/schematics": "~16.1.0",
+    "@angular-eslint/eslint-plugin": "~16.0.0",
+    "@angular-eslint/eslint-plugin-template": "~16.0.0",
+    "@angular-eslint/template-parser": "~16.0.0",
+    "@angular/cli": "~16.1.0",
+    "@angular/compiler-cli": "~16.1.0",
+    "@angular/language-service": "~16.1.0",
     "@brakebein/prisma-generator-nestjs-dto": "^1.17.4",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
+    "@nx/angular": "^16.6.0",
+    "@nx/cypress": "16.6.0",
     "@nx/eslint-plugin": "16.5.2",
-    "@nx/jest": "16.5.2",
-    "@nx/js": "16.5.2",
+    "@nx/jest": "16.6.0",
+    "@nx/js": "16.6.0",
     "@nx/linter": "16.5.2",
     "@nx/nest": "16.5.2",
     "@nx/node": "16.5.2",
+    "@nx/web": "16.6.0",
     "@nx/webpack": "16.5.2",
     "@nx/workspace": "16.5.2",
+    "@schematics/angular": "~16.1.0",
     "@types/jest": "^29.4.0",
     "@types/node": "~18.7.1",
     "@types/passport-jwt": "^3.0.9",
     "@types/passport-local": "^1.0.35",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
+    "cypress": "^12.16.0",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-cypress": "^2.10.3",
     "jest": "^29.4.1",
+    "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.4.1",
+    "jest-preset-angular": "~13.1.0",
     "nx": "16.5.2",
     "nx-cloud": "latest",
     "prettier": "^2.6.2",
