--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^10.0.2",
     "@nestjs/swagger": "^7.1.2",
+    "@ngrx/store": "^16.2.0",
     "@prisma/client": "^5.1.1",
     "axios": "^1.0.0",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "ngrx-forms": "^8.0.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
