--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@nestjs/platform-express": "^10.0.2",
     "@nestjs/swagger": "^7.1.2",
     "@ngrx/store": "^16.2.0",
+    "@nx/devkit": "^16.7.2",
     "@prisma/client": "^5.1.1",
     "axios": "^1.0.0",
     "bcrypt": "^5.1.0",
@@ -48,7 +49,7 @@
     "@nestjs/testing": "^10.0.2",
     "@nx/angular": "^16.6.0",
     "@nx/cypress": "16.6.0",
-    "@nx/eslint-plugin": "16.5.2",
+    "@nx/eslint-plugin": "^16.5.2",
     "@nx/jest": "16.6.0",
     "@nx/js": "16.6.0",
     "@nx/linter": "16.5.2",
