Update module boundaries

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,7 +17,7 @@
                 "onlyDependOnLibsWithTags": [
                   "type:feature",
                   "type:ui",
-                  "type:domain-logic",
+                  // "type:domain-logic",
                   "type:util",
                   "type:data-access"
                 ]
@@ -30,7 +30,8 @@
                 "sourceTag": "type:feature",
                 "onlyDependOnLibsWithTags": [
                   "type:ui",
-                  "type:domain-logic",
+                  // "type:domain-logic",
+                  "type:data-access",
                   "type:util"
                 ]
               },
@@ -41,6 +42,10 @@
               {
                 "sourceTag": "type:domain-logic",
                 "onlyDependOnLibsWithTags": ["type:util"]
+              },
+              {
+                "sourceTag": "scope:client-web-app",
+                "onlyDependOnLibsWithTags": ["scope:client-web-app"]
               }
             ]
           }
