--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ngrx/store": "^16.2.0",
     "@nx/devkit": "^16.7.2",
     "@prisma/client": "^5.1.1",
+    "@supabase/supabase-js": "^2.33.1",
     "axios": "^1.0.0",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
@@ -65,6 +66,7 @@
     "@types/passport-local": "^1.0.35",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
+    "autoprefixer": "^10.4.0",
     "cypress": "^12.16.0",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
@@ -75,8 +77,10 @@
     "jest-preset-angular": "~13.1.0",
     "nx": "16.5.2",
     "nx-cloud": "latest",
+    "postcss": "^8.4.5",
     "prettier": "^2.6.2",
     "prisma": "^5.1.1",
+    "tailwindcss": "^3.0.2",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "tslib": "^2.6.1",
