--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^10.0.2",
     "@nestjs/swagger": "^7.1.2",
+    "@ngrx/component-store": "~16.0.0",
+    "@ngrx/effects": "^16.2.0",
+    "@ngrx/entity": "~16.0.0",
+    "@ngrx/router-store": "~16.0.0",
     "@ngrx/store": "^16.2.0",
     "@nx/devkit": "^16.7.2",
     "@prisma/client": "^5.1.1",
@@ -48,6 +52,9 @@
     "@brakebein/prisma-generator-nestjs-dto": "^1.17.4",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
+    "@ngrx/eslint-plugin": "^16.2.0",
+    "@ngrx/schematics": "~16.0.0",
+    "@ngrx/store-devtools": "~16.0.0",
     "@nx/angular": "^16.6.0",
     "@nx/cypress": "16.6.0",
     "@nx/eslint-plugin": "^16.5.2",
@@ -71,6 +78,7 @@
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
+    "jasmine-marbles": "~0.9.1",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.4.1",
