Change domain name and style cards
Change domain name from browse to browsing to be more suitable to domain naming. Add Style cards to improve UI

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,7 +23,7 @@
               },
               {
                 "sourceTag": "type:data-access",
-                "onlyDependOnLibsWithTags": ["type:util"]
+                "onlyDependOnLibsWithTags": ["type:util", "type:shared"]
               },
               {
                 "sourceTag": "type:feature",
@@ -38,8 +38,8 @@
                 "onlyDependOnLibsWithTags": ["type:util"]
               },
               {
-                "sourceTag": "type:domain-logic",
-                "onlyDependOnLibsWithTags": ["type:util"]
+                "sourceTag": "type:shared",
+                "onlyDependOnLibsWithTags": []
               },
               {
                 "sourceTag": "scope:client-web-app",
