--- a/package.json
+++ b/package.json
@@ -5,26 +5,26 @@
   "scripts": {},
   "private": true,
   "dependencies": {
-    "@angular/animations": "~16.1.0",
-    "@angular/common": "~16.1.0",
-    "@angular/compiler": "~16.1.0",
-    "@angular/core": "~16.1.0",
-    "@angular/forms": "~16.1.0",
-    "@angular/platform-browser": "~16.1.0",
-    "@angular/platform-browser-dynamic": "~16.1.0",
-    "@angular/router": "~16.1.0",
+    "@angular/animations": "16.2.4",
+    "@angular/common": "16.2.4",
+    "@angular/compiler": "16.2.4",
+    "@angular/core": "16.2.4",
+    "@angular/forms": "16.2.4",
+    "@angular/platform-browser": "16.2.4",
+    "@angular/platform-browser-dynamic": "16.2.4",
+    "@angular/router": "16.2.4",
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^10.0.2",
     "@nestjs/swagger": "^7.1.2",
-    "@ngrx/component-store": "~16.0.0",
+    "@ngrx/component-store": "^16.2.0",
     "@ngrx/effects": "^16.2.0",
-    "@ngrx/entity": "~16.0.0",
-    "@ngrx/router-store": "~16.0.0",
+    "@ngrx/entity": "^16.2.0",
+    "@ngrx/router-store": "^16.2.0",
     "@ngrx/store": "^16.2.0",
-    "@nx/devkit": "^16.7.2",
+    "@nx/devkit": "16.8.1",
     "@prisma/client": "^5.1.1",
     "@supabase/supabase-js": "^2.33.1",
     "axios": "^1.0.0",
@@ -40,51 +40,51 @@
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~16.1.0",
-    "@angular-devkit/core": "~16.1.0",
-    "@angular-devkit/schematics": "~16.1.0",
+    "@angular-devkit/build-angular": "16.2.1",
+    "@angular-devkit/core": "16.2.1",
+    "@angular-devkit/schematics": "16.2.1",
     "@angular-eslint/eslint-plugin": "~16.0.0",
     "@angular-eslint/eslint-plugin-template": "~16.0.0",
     "@angular-eslint/template-parser": "~16.0.0",
-    "@angular/cli": "~16.1.0",
-    "@angular/compiler-cli": "~16.1.0",
-    "@angular/language-service": "~16.1.0",
+    "@angular/cli": "~16.2.0",
+    "@angular/compiler-cli": "16.2.4",
+    "@angular/language-service": "16.2.4",
     "@brakebein/prisma-generator-nestjs-dto": "^1.17.4",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
     "@ngrx/eslint-plugin": "^16.2.0",
-    "@ngrx/schematics": "~16.0.0",
-    "@ngrx/store-devtools": "~16.0.0",
-    "@nx/angular": "^16.6.0",
-    "@nx/cypress": "16.6.0",
-    "@nx/eslint-plugin": "^16.5.2",
-    "@nx/jest": "16.6.0",
-    "@nx/js": "16.6.0",
-    "@nx/linter": "16.5.2",
-    "@nx/nest": "16.5.2",
-    "@nx/node": "16.5.2",
-    "@nx/web": "16.6.0",
-    "@nx/webpack": "16.5.2",
-    "@nx/workspace": "16.5.2",
-    "@schematics/angular": "~16.1.0",
+    "@ngrx/schematics": "^16.2.0",
+    "@ngrx/store-devtools": "^16.2.0",
+    "@nx/angular": "16.8.1",
+    "@nx/cypress": "16.8.1",
+    "@nx/eslint-plugin": "16.8.1",
+    "@nx/jest": "16.8.1",
+    "@nx/js": "16.8.1",
+    "@nx/linter": "16.8.1",
+    "@nx/nest": "16.8.1",
+    "@nx/node": "16.8.1",
+    "@nx/web": "16.8.1",
+    "@nx/webpack": "16.8.1",
+    "@nx/workspace": "16.8.1",
+    "@schematics/angular": "16.2.1",
     "@types/jest": "^29.4.0",
     "@types/node": "~18.7.1",
     "@types/passport-jwt": "^3.0.9",
     "@types/passport-local": "^1.0.35",
-    "@typescript-eslint/eslint-plugin": "^5.60.1",
-    "@typescript-eslint/parser": "^5.60.1",
+    "@typescript-eslint/eslint-plugin": "5.60.1",
+    "@typescript-eslint/parser": "5.60.1",
     "autoprefixer": "^10.4.0",
-    "cypress": "^12.16.0",
-    "eslint": "~8.15.0",
+    "cypress": "^13.0.0",
+    "eslint": "8.46.0",
     "eslint-config-prettier": "8.1.0",
-    "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-cypress": "2.13.4",
     "jasmine-marbles": "~0.9.1",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.4.1",
     "jest-preset-angular": "~13.1.0",
-    "nx": "16.5.2",
-    "nx-cloud": "latest",
+    "nx": "16.8.1",
+    "nx-cloud": "16.4.0",
     "postcss": "^8.4.5",
     "prettier": "^2.6.2",
     "prisma": "^5.1.1",
