Add angular material to project

--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "16.2.4",
+    "@angular/cdk": "~16.2.3",
     "@angular/common": "16.2.4",
     "@angular/compiler": "16.2.4",
     "@angular/core": "16.2.4",
     "@angular/forms": "16.2.4",
+    "@angular/material": "~16.2.3",
     "@angular/platform-browser": "16.2.4",
     "@angular/platform-browser-dynamic": "16.2.4",
     "@angular/router": "16.2.4",
@@ -49,6 +51,7 @@
     "@angular/cli": "~16.2.0",
     "@angular/compiler-cli": "16.2.4",
     "@angular/language-service": "16.2.4",
+    "@angular/material": "^16.2.3",
     "@brakebein/prisma-generator-nestjs-dto": "^1.17.4",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
