--- a/apps/client-web-app/project.json
+++ b/apps/client-web-app/project.json
@@ -19,7 +19,10 @@
           "apps/client-web-app/src/favicon.ico",
           "apps/client-web-app/src/assets"
         ],
-        "styles": ["apps/client-web-app/src/styles.scss"],
+        "styles": [
+          "@angular/material/prebuilt-themes/indigo-pink.css",
+          "apps/client-web-app/src/styles.scss"
+        ],
         "scripts": []
       },
       "configurations": {
