--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -30,7 +30,11 @@
       "@e-commerce/client-web-app/shared/api-types": [
         "libs/client-web-app/shared/api-types/src/index.ts"
       ],
-      "@e-commerce/shared/data-access": ["libs/shared/data-access/src/index.ts"]
+      "@e-commerce/shared/data-access": [
+        "libs/shared/data-access/src/index.ts"
+      ],
+      "@e-commerce/shared/ui": ["libs/shared/ui/src/index.ts"],
+      "@e-commerce/ui": ["shared/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
