--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@nx/webpack": "16.8.1",
     "@nx/workspace": "16.8.1",
     "@schematics/angular": "16.2.1",
+    "@types/bcrypt": "^5.0.0",
     "@types/jest": "^29.4.0",
     "@types/node": "~18.7.1",
     "@types/passport-jwt": "^3.0.9",
