--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.4.1",
     "jest-preset-angular": "~13.1.0",
+    "jsonc-eslint-parser": "^2.1.0",
     "nx": "16.8.1",
     "nx-cloud": "16.4.0",
     "postcss": "^8.4.5",
