--- a/apps/client-web-app/project.json
+++ b/apps/client-web-app/project.json
@@ -20,7 +20,8 @@
           "apps/client-web-app/src/assets"
         ],
         "styles": [
-          "@angular/material/prebuilt-themes/indigo-pink.css",
+          "node_modules/primeng/resources/themes/viva-dark/theme.css",
+          "node_modules/primeng/resources/primeng.min.css",
           "apps/client-web-app/src/styles.scss"
         ],
         "scripts": []
