--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -30,6 +30,7 @@
       "@e-commerce/client-web-app/shared/api-types": [
         "libs/client-web-app/shared/api-types/src/index.ts"
       ],
+      "@e-commerce/server/publishers": ["libs/server/publishers/src/index.ts"],
       "@e-commerce/shared/data-access": [
         "libs/shared/data-access/src/index.ts"
       ],
