--- a/libs/client-web-app/browsing/feature-products/project.json
+++ b/libs/client-web-app/browsing/feature-products/project.json
@@ -1,16 +1,16 @@
 {
-  "name": "shared-ui",
-  "$schema": "../../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/shared/ui/src",
+  "name": "client-web-app-browsing-feature-products",
+  "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
+  "sourceRoot": "libs/client-web-app/browsing/feature-products/src",
   "prefix": "e-commerce",
-  "tags": ["scope:client-web-app", "type:ui"],
+  "tags": ["scope:client-web-app", "type:feature"],
   "projectType": "library",
   "targets": {
     "test": {
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/shared/ui/jest.config.ts",
+        "jestConfig": "libs/client-web-app/browsing/feature-products/jest.config.ts",
         "passWithNoTests": true
       },
       "configurations": {
@@ -25,8 +25,8 @@
       "outputs": ["{options.outputFile}"],
       "options": {
         "lintFilePatterns": [
-          "libs/shared/ui/**/*.ts",
-          "libs/shared/ui/**/*.html"
+          "libs/client-web-app/browsing/feature-products/**/*.ts",
+          "libs/client-web-app/browsing/feature-products/**/*.html"
         ]
       }
     }
