--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@angular/compiler": "16.2.4",
     "@angular/core": "16.2.4",
     "@angular/forms": "16.2.4",
-    "@angular/material": "~16.2.3",
     "@angular/platform-browser": "16.2.4",
     "@angular/platform-browser-dynamic": "16.2.4",
     "@angular/router": "16.2.4",
@@ -38,6 +37,7 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "primeflex": "^3.3.1",
+    "primeicons": "^6.0.1",
     "primeng": "^16.4.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
@@ -53,7 +53,6 @@
     "@angular/cli": "~16.2.0",
     "@angular/compiler-cli": "16.2.4",
     "@angular/language-service": "16.2.4",
-    "@angular/material": "^16.2.3",
     "@brakebein/prisma-generator-nestjs-dto": "^1.17.4",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
@@ -95,7 +94,6 @@
     "postcss": "^8.4.5",
     "prettier": "^2.6.2",
     "prisma": "^5.3.0",
-    "tailwindcss": "^3.0.2",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "tslib": "^2.6.1",
