Create auth lib
This lib contains a everything needed to authentication a user

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,15 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@e-commerce/client-web-app/auth/data-access-auth": [
+        "libs/client-web-app/auth/data-access-auth/src/index.ts"
+      ],
+      "@e-commerce/client-web-app/auth/feature-register": [
+        "libs/client-web-app/auth/feature-register/src/index.ts"
+      ],
+      "@e-commerce/client-web-app/auth/ui-auth": [
+        "libs/client-web-app/auth/ui-auth/src/index.ts"
+      ],
       "@e-commerce/client-web-app/browsing/data-access": [
         "libs/client-web-app/browsing/data-access/src/index.ts"
       ],
