--- a/apps/client-web-app/project.json
+++ b/apps/client-web-app/project.json
@@ -57,10 +57,10 @@
       "executor": "@angular-devkit/build-angular:dev-server",
       "configurations": {
         "production": {
-          "browserTarget": "client-web-app:build:production"
+          "buildTarget": "client-web-app:build:production"
         },
         "development": {
-          "browserTarget": "client-web-app:build:development"
+          "buildTarget": "client-web-app:build:development"
         }
       },
       "defaultConfiguration": "development"
@@ -68,31 +68,18 @@
     "extract-i18n": {
       "executor": "@angular-devkit/build-angular:extract-i18n",
       "options": {
-        "browserTarget": "client-web-app:build"
+        "buildTarget": "client-web-app:build"
       }
     },
     "lint": {
-      "executor": "@nx/linter:eslint",
-      "outputs": ["{options.outputFile}"],
-      "options": {
-        "lintFilePatterns": [
-          "apps/client-web-app/**/*.ts",
-          "apps/client-web-app/**/*.html"
-        ]
-      }
+      "executor": "@nx/eslint:lint",
+      "outputs": ["{options.outputFile}"]
     },
     "test": {
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "apps/client-web-app/jest.config.ts",
-        "passWithNoTests": true
-      },
-      "configurations": {
-        "ci": {
-          "ci": true,
-          "codeCoverage": true
-        }
+        "jestConfig": "apps/client-web-app/jest.config.ts"
       }
     },
     "serve-static": {
