--- a/package.json
+++ b/package.json
@@ -5,27 +5,27 @@
   "scripts": {},
   "private": true,
   "dependencies": {
-    "@angular/animations": "16.2.4",
-    "@angular/cdk": "~16.2.3",
-    "@angular/common": "16.2.4",
-    "@angular/compiler": "16.2.4",
-    "@angular/core": "16.2.4",
-    "@angular/forms": "16.2.4",
-    "@angular/platform-browser": "16.2.4",
-    "@angular/platform-browser-dynamic": "16.2.4",
-    "@angular/router": "16.2.4",
+    "@angular/animations": "17.0.4",
+    "@angular/cdk": "17.0.1",
+    "@angular/common": "17.0.4",
+    "@angular/compiler": "17.0.4",
+    "@angular/core": "17.0.4",
+    "@angular/forms": "17.0.4",
+    "@angular/platform-browser": "17.0.4",
+    "@angular/platform-browser-dynamic": "17.0.4",
+    "@angular/router": "17.0.4",
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^10.0.2",
     "@nestjs/swagger": "^7.1.2",
-    "@ngrx/component-store": "^16.2.0",
-    "@ngrx/effects": "^16.2.0",
-    "@ngrx/entity": "^16.2.0",
-    "@ngrx/router-store": "^16.2.0",
-    "@ngrx/store": "^16.2.0",
-    "@nx/devkit": "16.8.1",
+    "@ngrx/component-store": "17.0.1",
+    "@ngrx/effects": "17.0.1",
+    "@ngrx/entity": "17.0.1",
+    "@ngrx/router-store": "17.0.1",
+    "@ngrx/store": "17.0.1",
+    "@nx/devkit": "17.2.0",
     "@prisma/client": "^5.3.0",
     "@supabase/supabase-js": "^2.33.1",
     "axios": "^1.0.0",
@@ -37,66 +37,65 @@
     "passport-local": "^1.0.0",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
-    "primeng": "^16.4.1",
+    "primeng": "^17.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
-    "zone.js": "~0.13.0"
+    "zone.js": "0.14.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "16.2.1",
-    "@angular-devkit/core": "16.2.1",
-    "@angular-devkit/schematics": "16.2.1",
-    "@angular-eslint/eslint-plugin": "~16.0.0",
-    "@angular-eslint/eslint-plugin-template": "~16.0.0",
-    "@angular-eslint/template-parser": "~16.0.0",
-    "@angular/cli": "~16.2.0",
-    "@angular/compiler-cli": "16.2.4",
-    "@angular/language-service": "16.2.4",
+    "@angular-devkit/build-angular": "17.0.3",
+    "@angular-devkit/core": "17.0.3",
+    "@angular-devkit/schematics": "17.0.3",
+    "@angular-eslint/eslint-plugin": "17.0.1",
+    "@angular-eslint/eslint-plugin-template": "17.0.1",
+    "@angular-eslint/template-parser": "17.0.1",
+    "@angular/cli": "~17.0.0",
+    "@angular/compiler-cli": "17.0.4",
+    "@angular/language-service": "17.0.4",
     "@brakebein/prisma-generator-nestjs-dto": "^1.17.4",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
-    "@ngrx/eslint-plugin": "^16.2.0",
-    "@ngrx/schematics": "^16.2.0",
-    "@ngrx/store-devtools": "^16.2.0",
-    "@nx/angular": "16.8.1",
-    "@nx/cypress": "16.8.1",
-    "@nx/eslint-plugin": "16.8.1",
-    "@nx/jest": "16.8.1",
-    "@nx/js": "16.8.1",
-    "@nx/linter": "16.8.1",
-    "@nx/nest": "16.8.1",
-    "@nx/node": "16.8.1",
-    "@nx/web": "16.8.1",
-    "@nx/webpack": "16.8.1",
-    "@nx/workspace": "16.8.1",
-    "@schematics/angular": "16.2.1",
+    "@ngrx/eslint-plugin": "17.0.1",
+    "@ngrx/schematics": "17.0.1",
+    "@ngrx/store-devtools": "17.0.1",
+    "@nx/angular": "17.2.0",
+    "@nx/cypress": "17.2.0",
+    "@nx/eslint": "17.2.0",
+    "@nx/eslint-plugin": "17.2.0",
+    "@nx/jest": "17.2.0",
+    "@nx/js": "17.2.0",
+    "@nx/nest": "17.2.0",
+    "@nx/node": "17.2.0",
+    "@nx/web": "17.2.0",
+    "@nx/webpack": "17.2.0",
+    "@nx/workspace": "17.2.0",
+    "@schematics/angular": "17.0.3",
     "@types/bcrypt": "^5.0.0",
     "@types/jest": "^29.4.0",
-    "@types/node": "~18.7.1",
+    "@types/node": "18.16.9",
     "@types/passport-jwt": "^3.0.9",
     "@types/passport-local": "^1.0.35",
-    "@typescript-eslint/eslint-plugin": "5.60.1",
-    "@typescript-eslint/parser": "5.60.1",
+    "@typescript-eslint/eslint-plugin": "6.9.1",
+    "@typescript-eslint/parser": "6.9.1",
     "autoprefixer": "^10.4.0",
     "cypress": "^13.0.0",
-    "eslint": "8.46.0",
-    "eslint-config-prettier": "8.1.0",
+    "eslint": "8.48.0",
+    "eslint-config-prettier": "9.0.0",
     "eslint-plugin-cypress": "2.13.4",
     "jasmine-marbles": "~0.9.1",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.4.1",
-    "jest-preset-angular": "~13.1.0",
+    "jest-preset-angular": "13.1.4",
     "jsonc-eslint-parser": "^2.1.0",
-    "nx": "16.8.1",
-    "nx-cloud": "16.4.0",
+    "nx": "17.2.0",
     "postcss": "^8.4.31",
     "prettier": "^2.6.2",
     "prisma": "^5.3.0",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "tslib": "^2.6.1",
-    "typescript": "~5.1.3"
+    "typescript": "5.2.2"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
