--- a/package.json
+++ b/package.json
@@ -70,6 +70,9 @@
     "@nx/webpack": "18.2.1",
     "@nx/workspace": "18.2.1",
     "@schematics/angular": "17.3.2",
+    "@swc-node/register": "~1.8.0",
+    "@swc/core": "~1.3.85",
+    "@swc/helpers": "~0.5.2",
     "@types/bcrypt": "^5.0.0",
     "@types/jest": "^29.4.0",
     "@types/node": "^18.16.9",
@@ -101,4 +104,3 @@
     "seed": "ts-node prisma/seed.ts"
   }
 }
-
