Add new tag shell-feature
Shell-feature tag is used in core component of library like whole app routing or routing of lib features

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -44,6 +44,15 @@
               {
                 "sourceTag": "scope:client-web-app",
                 "onlyDependOnLibsWithTags": ["scope:client-web-app"]
+              },
+              {
+                "sourceTag": "type:shell-feature",
+                "onlyDependOnLibsWithTags": [
+                  "type:feature",
+                  "type:ui",
+                  "type:data-access",
+                  "type:util"
+                ]
               }
             ]
           }
