--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@angular/compiler-cli": "17.3.2",
     "@angular/language-service": "17.3.2",
     "@brakebein/prisma-generator-nestjs-dto": "^1.17.4",
+    "@happy-dom/jest-environment": "^14.6.2",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
     "@ngrx/eslint-plugin": "17.0.1",
@@ -85,6 +86,7 @@
     "eslint": "8.57.0",
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-cypress": "2.13.4",
+    "happy-dom": "^14.6.2",
     "jasmine-marbles": "~0.9.1",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
