Create basic auth implementation
User can sign in and sign up, session is stored in local storage, the app is read the local storage on app_init to get session

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,7 +35,7 @@
               },
               {
                 "sourceTag": "type:ui",
-                "onlyDependOnLibsWithTags": ["type:util"]
+                "onlyDependOnLibsWithTags": ["type:util", "type:data-access"]
               },
               {
                 "sourceTag": "type:shared",
