--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,11 +15,26 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@e-commerce/clint-web-app/shared/data-access/auth": [
+        "libs/client-web-app/shared/data-access/auth/src/index.ts"
+      ],
       "@e-commerce/client-web-app/auth/data-access": [
         "libs/client-web-app/auth/data-access/src/index.ts"
       ],
       "@e-commerce/client-web-app/auth/feature-register": [
         "libs/client-web-app/auth/feature-register/src/index.ts"
+      ],
+      "@e-commerce/client-web-app/auth/feature/login": [
+        "libs/client-web-app/auth/feature/login/src/index.ts"
+      ],
+      "@e-commerce/client-web-app/auth/feature/register": [
+        "libs/client-web-app/auth/feature/register/src/index.ts"
+      ],
+      "@e-commerce/client-web-app/auth/feature/shell": [
+        "libs/client-web-app/auth/feature/shell/src/index.ts"
+      ],
+      "@e-commerce/client-web-app/auth/ui/form-wrapper": [
+        "libs/client-web-app/auth/ui/form-wrapper/src/index.ts"
       ],
       "@e-commerce/client-web-app/home/ui": [
         "libs/client-web-app/home/ui/src/index.ts"
@@ -51,23 +66,14 @@
       "@e-commerce/client-web-app/shell/ui": [
         "libs/client-web-app/shell/ui/src/index.ts"
       ],
-      "@e-commerce/client-web-app/auth/ui/form-wrapper": [
-        "libs/client-web-app/auth/ui/form-wrapper/src/index.ts"
-      ],
-      "@e-commerce/client-web-app/auth/feature/login": [
-        "libs/client-web-app/auth/feature/login/src/index.ts"
-      ],
-      "@e-commerce/client-web-app/auth/feature/register": [
-        "libs/client-web-app/auth/feature/register/src/index.ts"
-      ],
       "@e-commerce/server/publishers": ["libs/server/publishers/src/index.ts"],
       "@e-commerce/shared/data-access": [
         "libs/shared/data-access/src/index.ts"
       ],
-      "@e-commerce/client-web-app/auth/feature/shell": [
-        "libs/client-web-app/auth/feature/shell/src/index.ts"
+      "@e-commerce/store": [
+        "libs/client-web-app/home/data-access/src/index.ts"
       ],
-      "@e-commerce/store": ["libs/client-web-app/home/data-access/src/index.ts"]
+      "@e-commerce/utils": ["libs/client-web-app/shared/utils/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
