--- a/libs/client-web-app/shared/utils/project.json
+++ b/libs/client-web-app/shared/utils/project.json
@@ -1,16 +1,16 @@
 {
-  "name": "client-web-app-shell",
+  "name": "utils",
   "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/client-web-app/shell/feature/src",
+  "sourceRoot": "libs/client-web-app/shared/utils/src",
   "prefix": "lib",
   "projectType": "library",
-  "tags": ["scope:client-web-app", "type:feature"],
+  "tags": ["scope:client-web-app", "type:utils"],
   "targets": {
     "test": {
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/client-web-app/shell/feature/jest.config.ts"
+        "jestConfig": "libs/client-web-app/shared/utils/jest.config.ts"
       }
     },
     "lint": {
