Handle new auth endpoint and improve login and register forms
Delete auth data-access from auth lib. Improve ux of forms

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,7 @@
               {
                 "sourceTag": "type:feature",
                 "onlyDependOnLibsWithTags": [
+                  "type:feature",
                   "type:ui",
                   "type:data-access",
                   "type:util"
