--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/platform-browser-dynamic": "17.3.2",
     "@angular/router": "17.3.2",
     "@nestjs/common": "^10.0.2",
+    "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/passport": "^10.0.0",
@@ -32,6 +33,7 @@
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "lodash": "^4.17.21",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
@@ -76,6 +78,7 @@
     "@swc/helpers": "~0.5.2",
     "@types/bcrypt": "^5.0.0",
     "@types/jest": "^29.4.0",
+    "@types/lodash": "^4.17.0",
     "@types/node": "^18.16.9",
     "@types/passport-jwt": "^3.0.9",
     "@types/passport-local": "^1.0.35",
@@ -101,12 +104,5 @@
     "ts-node": "^10.9.1",
     "tslib": "^2.6.1",
     "typescript": "5.4.3"
-  },
-  "overrides": {
-    "@supabase/supabase-js": {
-      "dependencies": {
-        "@supabase/auth-js": "2.61.0"
-      }
-    }
   }
 }
