--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,19 @@
 {
   "root": true,
-  "ignorePatterns": ["**/*"],
-  "plugins": ["@nx"],
+  "ignorePatterns": [
+    "**/*"
+  ],
+  "plugins": [
+    "@nx"
+  ],
   "overrides": [
     {
-      "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
+      "files": [
+        "*.ts",
+        "*.tsx",
+        "*.js",
+        "*.jsx"
+      ],
       "rules": {
         "@nx/enforce-module-boundaries": [
           "error",
@@ -17,13 +26,16 @@
                 "onlyDependOnLibsWithTags": [
                   "type:feature",
                   "type:ui",
-                  "type:util",
+                  "type:utils",
                   "type:data-access"
                 ]
               },
               {
                 "sourceTag": "type:data-access",
-                "onlyDependOnLibsWithTags": ["type:util", "type:shared"]
+                "onlyDependOnLibsWithTags": [
+                  "type:utils",
+                  "type:shared"
+                ]
               },
               {
                 "sourceTag": "type:feature",
@@ -31,20 +43,29 @@
                   "type:feature",
                   "type:ui",
                   "type:data-access",
-                  "type:util"
+                  "type:utils"
                 ]
               },
               {
                 "sourceTag": "type:ui",
-                "onlyDependOnLibsWithTags": ["type:util", "type:data-access"]
+                "onlyDependOnLibsWithTags": [
+                  "type:utils",
+                  "type:data-access"
+                ]
               },
               {
                 "sourceTag": "type:shared",
                 "onlyDependOnLibsWithTags": []
               },
               {
+                "sourceTag": "type:utils",
+                "onlyDependOnLibsWithTags": []
+              },
+              {
                 "sourceTag": "scope:client-web-app",
-                "onlyDependOnLibsWithTags": ["scope:client-web-app"]
+                "onlyDependOnLibsWithTags": [
+                  "scope:client-web-app"
+                ]
               },
               {
                 "sourceTag": "type:shell-feature",
@@ -52,7 +73,7 @@
                   "type:feature",
                   "type:ui",
                   "type:data-access",
-                  "type:util"
+                  "type:utils"
                 ]
               }
             ]
@@ -61,17 +82,32 @@
       }
     },
     {
-      "files": ["*.ts", "*.tsx"],
-      "extends": ["plugin:@nx/typescript"],
+      "files": [
+        "*.ts",
+        "*.tsx"
+      ],
+      "extends": [
+        "plugin:@nx/typescript"
+      ],
       "rules": {}
     },
     {
-      "files": ["*.js", "*.jsx"],
-      "extends": ["plugin:@nx/javascript"],
+      "files": [
+        "*.js",
+        "*.jsx"
+      ],
+      "extends": [
+        "plugin:@nx/javascript"
+      ],
       "rules": {}
     },
     {
-      "files": ["*.spec.ts", "*.spec.tsx", "*.spec.js", "*.spec.jsx"],
+      "files": [
+        "*.spec.ts",
+        "*.spec.tsx",
+        "*.spec.js",
+        "*.spec.jsx"
+      ],
       "env": {
         "jest": true
       },
