--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -57,6 +57,9 @@
       "@e-commerce/client-web-app/shared/data-access/auth": [
         "libs/client-web-app/shared/data-access/auth/src/index.ts"
       ],
+      "@e-commerce/client-web-app/shared/data-access/category": [
+        "libs/client-web-app/shared/data-access/category/src/index.ts"
+      ],
       "@e-commerce/client-web-app/shared/data-access/category-api": [
         "libs/client-web-app/shared/data-access/api-services/src/index.ts"
       ],
@@ -69,13 +72,11 @@
       "@e-commerce/client-web-app/shell/ui": [
         "libs/client-web-app/shell/ui/src/index.ts"
       ],
-      "@e-commerce/server/publishers": ["libs/server/publishers/src/index.ts"],
-      "@e-commerce/shared/data-access": [
-        "libs/shared/data-access/src/index.ts"
-      ],
       "@e-commerce/client-web-app/shell/utils": [
         "libs/client-web-app/shell/utils/src/index.ts"
-      ]
+      ],
+      "@e-commerce/server/publishers": ["libs/server/publishers/src/index.ts"],
+      "@e-commerce/shared/data-access": ["libs/shared/data-access/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
