--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@ngrx/component-store": "17.0.1",
     "@ngrx/effects": "17.0.1",
     "@ngrx/entity": "17.0.1",
+    "@ngrx/operators": "^17.2.0",
     "@ngrx/router-store": "17.0.1",
+    "@ngrx/signals": "^17.2.0",
     "@ngrx/store": "17.0.1",
     "@nx/devkit": "18.2.1",
     "@prisma/client": "^5.3.0",
