Removed shared type
Removed unnecesarry type

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,19 +1,10 @@
 {
   "root": true,
-  "ignorePatterns": [
-    "**/*"
-  ],
-  "plugins": [
-    "@nx"
-  ],
+  "ignorePatterns": ["**/*"],
+  "plugins": ["@nx"],
   "overrides": [
     {
-      "files": [
-        "*.ts",
-        "*.tsx",
-        "*.js",
-        "*.jsx"
-      ],
+      "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
       "rules": {
         "@nx/enforce-module-boundaries": [
           "error",
@@ -32,10 +23,7 @@
               },
               {
                 "sourceTag": "type:data-access",
-                "onlyDependOnLibsWithTags": [
-                  "type:utils",
-                  "type:shared"
-                ]
+                "onlyDependOnLibsWithTags": ["type:utils", "type:data-access"]
               },
               {
                 "sourceTag": "type:feature",
@@ -48,10 +36,7 @@
               },
               {
                 "sourceTag": "type:ui",
-                "onlyDependOnLibsWithTags": [
-                  "type:utils",
-                  "type:data-access"
-                ]
+                "onlyDependOnLibsWithTags": ["type:utils", "type:data-access"]
               },
               {
                 "sourceTag": "type:shared",
@@ -63,9 +48,7 @@
               },
               {
                 "sourceTag": "scope:client-web-app",
-                "onlyDependOnLibsWithTags": [
-                  "scope:client-web-app"
-                ]
+                "onlyDependOnLibsWithTags": ["scope:client-web-app"]
               },
               {
                 "sourceTag": "type:shell-feature",
@@ -82,32 +65,17 @@
       }
     },
     {
-      "files": [
-        "*.ts",
-        "*.tsx"
-      ],
-      "extends": [
-        "plugin:@nx/typescript"
-      ],
+      "files": ["*.ts", "*.tsx"],
+      "extends": ["plugin:@nx/typescript"],
       "rules": {}
     },
     {
-      "files": [
-        "*.js",
-        "*.jsx"
-      ],
-      "extends": [
-        "plugin:@nx/javascript"
-      ],
+      "files": ["*.js", "*.jsx"],
+      "extends": ["plugin:@nx/javascript"],
       "rules": {}
     },
     {
-      "files": [
-        "*.spec.ts",
-        "*.spec.tsx",
-        "*.spec.js",
-        "*.spec.jsx"
-      ],
+      "files": ["*.spec.ts", "*.spec.tsx", "*.spec.js", "*.spec.jsx"],
       "env": {
         "jest": true
       },
