--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -82,7 +82,12 @@
         "libs/client-web-app/shell/utils/src/index.ts"
       ],
       "@e-commerce/server/publishers": ["libs/server/publishers/src/index.ts"],
-      "@e-commerce/shared/data-access": ["libs/shared/data-access/src/index.ts"]
+      "@e-commerce/shared/data-access": [
+        "libs/shared/data-access/src/index.ts"
+      ],
+      "@e-commerce/client-web-app/books/ui/skeleton": [
+        "libs/client-web-app/books/ui/skeleton/src/index.ts"
+      ]
     }
   },
   "exclude": ["node_modules", "tmp"]
