Add shared-data-access type to eslint
I find out that specific types cannot import themselves that why I added another type because some of libs are using in the whole app. I wanted to restrict DDD rules

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,32 +18,55 @@
                   "type:feature",
                   "type:ui",
                   "type:utils",
-                  "type:data-access"
+                  "type:data-access",
+                  "type:shared-data-access",
+                  "type:shared-utils",
+                  "type:shared-ui"
                 ]
               },
               {
                 "sourceTag": "type:feature",
                 "onlyDependOnLibsWithTags": [
-                  "type:feature",
                   "type:ui",
                   "type:data-access",
-                  "type:utils"
+                  "type:utils",
+                  "type:shared-data-access",
+                  "type:shared-utils",
+                  "type:shared-ui"
                 ]
               },
               {
                 "sourceTag": "type:data-access",
-                "onlyDependOnLibsWithTags": ["type:utils", "type:data-access"]
+                "onlyDependOnLibsWithTags": [
+                  "type:utils",
+                  "type:shared-data-access",
+                  "type:shared-utils"
+                ]
+              },
+              {
+                "sourceTag": "type:shared-data-access",
+                "onlyDependOnLibsWithTags": ["type:utils", "type:shared-utils"]
               },
               {
                 "sourceTag": "type:ui",
                 "onlyDependOnLibsWithTags": [
                   "type:utils",
                   "type:data-access",
-                  "type:ui"
+                  "type:shared-data-access",
+                  "type:shared-ui",
+                  "type:shared-utils"
                 ]
               },
               {
+                "sourceTag": "type:shared-ui",
+                "onlyDependOnLibsWithTags": ["type:utils", "type:data-access"]
+              },
+              {
                 "sourceTag": "type:utils",
+                "onlyDependOnLibsWithTags": ["type:shared-utils"]
+              },
+              {
+                "sourceTag": "type:shared-utils",
                 "onlyDependOnLibsWithTags": []
               },
               {
