Create a new lib typ and add router config
Create shell lib type to concat couple of domain features into one file. Add router config to decrease possibility of error such as a typo in query params etc.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -70,6 +70,18 @@
                 "onlyDependOnLibsWithTags": []
               },
               {
+                "sourceTag": "type:shell",
+                "onlyDependOnLibsWithTags": [
+                  "type:feature",
+                  "type:ui",
+                  "type:data-access",
+                  "type:utils",
+                  "type:shared-data-access",
+                  "type:shared-utils",
+                  "type:shared-ui"
+                ]
+              },
+              {
                 "sourceTag": "scope:client-web-app",
                 "onlyDependOnLibsWithTags": ["scope:client-web-app"]
               }
