--- a/libs/client-web-app/shared/utils/router-config/project.json
+++ b/libs/client-web-app/shared/utils/router-config/project.json
@@ -1,16 +1,16 @@
 {
-  "name": "router-config",
+  "name": "client-web-app/shared/utils/router-config",
   "$schema": "../../../../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/client-web-app/browse/utils/router-config/src",
+  "sourceRoot": "libs/client-web-app/shared/utils/router-config/src",
   "prefix": "lib",
   "projectType": "library",
-  "tags": ["scope:client-web-app", "type:utils"],
+  "tags": ["scope:client-web-app", "type:shared-utils"],
   "targets": {
     "test": {
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/client-web-app/browse/utils/router-config/jest.config.ts"
+        "jestConfig": "libs/client-web-app/shared/utils/router-config/jest.config.ts"
       }
     },
     "lint": {
