Add skeleton of book details route and set height of card in books view

--- a/libs/client-web-app/auth/feature/shell/project.json
+++ b/libs/client-web-app/auth/feature/shell/project.json
@@ -1,5 +1,5 @@
 {
-  "name": "shell",
+  "name": "client-web-app/auth/feature/shell",
   "$schema": "../../../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/client-web-app/auth/feature/shell/src",
   "prefix": "e-commerce",
