--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@ngrx/router-store": "17.0.1",
     "@ngrx/signals": "^17.2.0",
     "@ngrx/store": "17.0.1",
-    "@nx/devkit": "18.2.1",
+    "@nx/devkit": "19.0.2",
     "@prisma/client": "^5.3.0",
     "axios": "1.6.0",
     "bcrypt": "^5.1.0",
@@ -47,7 +47,7 @@
     "zone.js": "0.14.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "17.3.2",
+    "@angular-devkit/build-angular": "^17.3.7",
     "@angular-devkit/core": "17.3.2",
     "@angular-devkit/schematics": "17.3.2",
     "@angular-eslint/eslint-plugin": "17.3.0",
@@ -63,17 +63,17 @@
     "@ngrx/eslint-plugin": "17.0.1",
     "@ngrx/schematics": "17.0.1",
     "@ngrx/store-devtools": "17.0.1",
-    "@nx/angular": "18.2.1",
-    "@nx/cypress": "18.2.1",
-    "@nx/eslint": "18.2.1",
-    "@nx/eslint-plugin": "18.2.1",
-    "@nx/jest": "18.2.1",
-    "@nx/js": "18.2.1",
-    "@nx/nest": "18.2.1",
-    "@nx/node": "18.2.1",
-    "@nx/web": "18.2.1",
-    "@nx/webpack": "18.2.1",
-    "@nx/workspace": "18.2.1",
+    "@nx/angular": "19.0.2",
+    "@nx/cypress": "19.0.2",
+    "@nx/eslint": "19.0.2",
+    "@nx/eslint-plugin": "19.0.2",
+    "@nx/jest": "19.0.2",
+    "@nx/js": "19.0.2",
+    "@nx/nest": "19.0.2",
+    "@nx/node": "19.0.2",
+    "@nx/web": "19.0.2",
+    "@nx/webpack": "19.0.2",
+    "@nx/workspace": "19.0.2",
     "@schematics/angular": "17.3.2",
     "@swc-node/register": "~1.8.0",
     "@swc/core": "~1.3.85",
@@ -98,7 +98,7 @@
     "jest-environment-node": "^29.4.1",
     "jest-preset-angular": "14.0.3",
     "jsonc-eslint-parser": "^2.1.0",
-    "nx": "18.2.1",
+    "nx": "19.0.2",
     "postcss": "^8.4.31",
     "prettier": "^2.6.2",
     "prisma": "^5.3.0",
