Add rule a new rule
Type shell can import type shell

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -72,6 +72,7 @@
               {
                 "sourceTag": "type:shell",
                 "onlyDependOnLibsWithTags": [
+                  "type:shell",
                   "type:feature",
                   "type:ui",
                   "type:data-access",
