--- a/libs/client-web-app/shared/ui/book-card/project.json
+++ b/libs/client-web-app/shared/ui/book-card/project.json
@@ -1,16 +1,16 @@
 {
-  "name": "client-web-app/shared/data-access/api-services",
+  "name": "client-web-app/shared/ui/book-card",
   "$schema": "../../../../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/client-web-app/shared/data-access/api-services/src",
+  "sourceRoot": "libs/client-web-app/shared/ui/book-card/src",
   "prefix": "lib",
   "projectType": "library",
-  "tags": ["scope:client-web-app", "type:shared-data-access"],
+  "tags": ["scope:client-web-app", "type:shared-ui"],
   "targets": {
     "test": {
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/client-web-app/shared/data-access/api-services/jest.config.ts"
+        "jestConfig": "libs/client-web-app/shared/ui/book-card/jest.config.ts"
       }
     },
     "lint": {
