--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -105,6 +105,12 @@
       "@e-commerce/client-web-app/shell/ui": [
         "libs/client-web-app/shell/ui/src/index.ts"
       ],
+      "@e-commerce/client-web-app/shell/ui/cart-sidebar": [
+        "libs/client-web-app/shell/ui/cart-sidebar/src/index.ts"
+      ],
+      "@e-commerce/client-web-app/shell/ui/nav": [
+        "libs/client-web-app/shell/ui/nav/src/index.ts"
+      ],
       "@e-commerce/client-web-app/shell/utils": [
         "libs/client-web-app/shell/utils/src/index.ts"
       ],
