Create a country model and implement creating and updating a user address

--- a/package.json
+++ b/package.json
@@ -30,12 +30,13 @@
     "@ngrx/store": "17.0.1",
     "@nx/devkit": "19.0.2",
     "@prisma/client": "^5.3.0",
+    "@types/lodash-es": "^4.17.12",
     "axios": "1.6.0",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "jwt-decode": "^4.0.0",
-    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
@@ -80,7 +81,6 @@
     "@swc/helpers": "~0.5.2",
     "@types/bcrypt": "^5.0.0",
     "@types/jest": "^29.4.0",
-    "@types/lodash": "^4.17.0",
     "@types/node": "^18.16.9",
     "@types/passport-jwt": "^3.0.9",
     "@types/passport-local": "^1.0.35",
