Create client-web and api app. Install deps

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,8 +13,92 @@
             "allow": [],
             "depConstraints": [
               {
-                "sourceTag": "*",
-                "onlyDependOnLibsWithTags": ["*"]
+                "sourceTag": "type:app",
+                "onlyDependOnLibsWithTags": [
+                  "type:feature",
+                  "type:ui",
+                  "type:util",
+                  "type:data-access",
+                  "type:shared-data-access",
+                  "type:shared-util",
+                  "type:shared-ui"
+                ]
+              },
+              {
+                "sourceTag": "type:feature",
+                "onlyDependOnLibsWithTags": [
+                  "type:ui",
+                  "type:data-access",
+                  "type:util",
+                  "type:shared-data-access",
+                  "type:shared-util",
+                  "type:shared-ui"
+                ]
+              },
+              {
+                "sourceTag": "type:data-access",
+                "onlyDependOnLibsWithTags": [
+                  "type:util",
+                  "type:shared-data-access",
+                  "type:shared-util"
+                ]
+              },
+              {
+                "sourceTag": "type:shared-data-access",
+                "onlyDependOnLibsWithTags": [
+                  "type:util",
+                  "type:shared-util",
+                  "type:shared-data-access"
+                ]
+              },
+              {
+                "sourceTag": "type:ui",
+                "onlyDependOnLibsWithTags": [
+                  "type:util",
+                  "type:data-access",
+                  "type:shared-data-access",
+                  "type:shared-ui",
+                  "type:shared-util"
+                ]
+              },
+              {
+                "sourceTag": "type:shared-ui",
+                "onlyDependOnLibsWithTags": [
+                  "type:util",
+                  "type:shared-util",
+                  "type:data-access",
+                  "type:shared-data-access"
+                ]
+              },
+              {
+                "sourceTag": "type:util",
+                "onlyDependOnLibsWithTags": ["type:shared-util"]
+              },
+              {
+                "sourceTag": "type:shared-util",
+                "onlyDependOnLibsWithTags": []
+              },
+              {
+                "sourceTag": "type:shell",
+                "onlyDependOnLibsWithTags": [
+                  "type:feature",
+                  "type:data-access",
+                  "type:util",
+                  "type:shared-data-access",
+                  "type:shared-util"
+                ]
+              },
+              {
+                "sourceTag": "domain:auth",
+                "onlyDependOnLibsWithTags": ["domain:auth, domain:shared"]
+              },
+              {
+                "sourceTag": "scope:client-web",
+                "onlyDependOnLibsWithTags": ["scope:client-web"]
+              },
+              {
+                "sourceTag": "scope:api",
+                "onlyDependOnLibsWithTags": ["scope:api"]
               }
             ]
           }
@@ -37,6 +121,51 @@
         "jest": true
       },
       "rules": {}
+    },
+    {
+      "plugins": ["@ngrx"],
+      "rules": {
+        "@ngrx/good-action-hygiene": "error"
+      }
+    },
+    {
+      "plugins": ["@ngrx"],
+      "parserOptions": {
+        "project": "tsconfig.json"
+      },
+      "rules": {
+        "@ngrx/avoid-cyclic-effects": "error"
+      }
+    },
+    {
+      "files": ["*.ts", "*.tsx"],
+      "parserOptions": {
+        "project": [
+          "apps/*/*/tsconfig.json",
+          "apps/*/*/tsconfig.*?.json",
+          "libs/*/*/*/tsconfig.*?.json",
+          "libs/workspace-generators-plugin/tsconfig.*?.json"
+        ]
+      },
+      "extends": ["plugin:@nx/typescript"],
+      "rules": {
+        "deprecation/deprecation": "warn",
+        "rxjs/no-async-subscribe": "error",
+        "rxjs/no-create": "error",
+        "rxjs/no-ignored-error": "error",
+        "rxjs/no-ignored-notifier": "error",
+        "rxjs/no-ignored-replay-buffer": "error",
+        "rxjs/no-ignored-takewhile-value": "error",
+        "rxjs/no-ignored-subscribe": "error",
+        "rxjs/no-index": "error",
+        "rxjs/no-internal": "error",
+        "rxjs/no-nested-subscribe": "error",
+        "rxjs/no-redundant-notify": "error",
+        "rxjs/no-sharereplay": "error",
+        "rxjs/no-unbound-methods": "error",
+        "rxjs/no-unsafe-subject-next": "error",
+        "rxjs/no-unsafe-takeuntil": "error"
+      }
     }
   ]
 }
