--- a/package.json
+++ b/package.json
@@ -13,7 +13,31 @@
     "@angular/platform-browser": "~18.1.0",
     "@angular/platform-browser-dynamic": "~18.1.0",
     "@angular/router": "~18.1.0",
+    "@nestjs/common": "^10.0.2",
+    "@nestjs/config": "^3.2.3",
+    "@nestjs/core": "^10.0.2",
+    "@nestjs/passport": "^10.0.3",
+    "@nestjs/platform-express": "^10.0.2",
+    "@nestjs/swagger": "^7.4.0",
+    "@ngrx/effects": "^18.0.2",
+    "@ngrx/eslint-plugin": "^18.0.2",
+    "@ngrx/operators": "^18.0.2",
+    "@ngrx/store": "^18.0.2",
     "@nx/angular": "19.5.7",
+    "@prisma/client": "^5.18.0",
+    "@types/passport-local": "^1.0.38",
+    "axios": "^1.6.0",
+    "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "eslint-plugin-deprecation": "^3.0.0",
+    "eslint-plugin-rxjs": "^5.0.3",
+    "jwt-decode": "^4.0.0",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
+    "primeicons": "^7.0.0",
+    "primeng": "^17.18.8",
+    "reflect-metadata": "^0.1.13",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -28,12 +52,18 @@
     "@angular/cli": "~18.1.0",
     "@angular/compiler-cli": "~18.1.0",
     "@angular/language-service": "~18.1.0",
+    "@nestjs/schematics": "^10.0.1",
+    "@nestjs/testing": "^10.0.2",
+    "@nrwl/nest": "19.5.7",
     "@nx/cypress": "19.5.7",
     "@nx/eslint": "19.5.7",
     "@nx/eslint-plugin": "19.5.7",
     "@nx/jest": "19.5.7",
     "@nx/js": "19.5.7",
+    "@nx/nest": "19.5.7",
+    "@nx/node": "19.5.7",
     "@nx/web": "19.5.7",
+    "@nx/webpack": "19.5.7",
     "@nx/workspace": "19.5.7",
     "@schematics/angular": "~18.1.0",
     "@swc-node/register": "~1.9.1",
@@ -50,11 +80,13 @@
     "eslint-plugin-cypress": "^2.13.4",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
+    "jest-environment-node": "^29.4.1",
     "jest-preset-angular": "~14.1.0",
     "nx": "19.5.7",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~5.5.2"
+    "typescript": "~5.5.2",
+    "webpack-cli": "^5.1.4"
   }
 }
