--- a/apps/client-web/project.json
+++ b/apps/client-web/project.json
@@ -4,11 +4,16 @@
   "projectType": "application",
   "prefix": "app",
   "sourceRoot": "apps/client-web/src",
-  "tags": ["scope:client-web", "type:app"],
+  "tags": [
+    "scope:client-web",
+    "type:app"
+  ],
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:application",
-      "outputs": ["{options.outputPath}"],
+      "outputs": [
+        "{options.outputPath}"
+      ],
       "options": {
         "outputPath": "dist/apps/client-web",
         "index": "apps/client-web/src/index.html",
@@ -52,7 +57,8 @@
               "maximumError": "4kb"
             }
           ],
-          "outputHashing": "all"
+          "outputHashing": "all",
+          "serviceWorker": "apps/client-web/ngsw-config.json"
         },
         "development": {
           "optimization": false,
@@ -88,7 +94,9 @@
     },
     "test": {
       "executor": "@nx/jest:jest",
-      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+      "outputs": [
+        "{workspaceRoot}/coverage/{projectRoot}"
+      ],
       "options": {
         "jestConfig": "apps/client-web/jest.config.ts"
       }
